--- a/CodeBook.Rmd
+++ b/CodeBook.Rmd
@@ -1,19 +1,5 @@
----
-title: "CodeBook"
-output: html_document
----
 
-==================================================================
-Human Activity Recognition Using Smartphones Dataset
-Version 1.0
-==================================================================
-Jorge L. Reyes-Ortiz, Davide Anguita, Alessandro Ghio, Luca Oneto.
-Smartlab - Non Linear Complex Systems Laboratory
-DITEN - Universit‡ degli Studi di Genova.
-Via Opera Pia 11A, I-16145, Genoa, Italy.
-activityrecognition@smartlab.ws
-www.smartlab.ws
-==================================================================
+# Dataset Information
 
 The experiments have been carried out with a group of 30 volunteers within an age bracket of 19-48 years. Each person performed six activities (WALKING, WALKING_UPSTAIRS, WALKING_DOWNSTAIRS, SITTING, STANDING, LAYING) wearing a smartphone (Samsung Galaxy S II) on the waist. Using its embedded accelerometer and gyroscope, we captured 3-axial linear acceleration and 3-axial angular velocity at a constant rate of 50Hz. The experiments have been video-recorded to label the data manually. The obtained dataset has been randomly partitioned into two sets, where 70% of the volunteers was selected for generating the training data and 30% the test data. 
 
@@ -61,3 +47,22 @@ Notes:
 ======
 - Features are normalized and bounded within [-1,1].
 - Each feature vector is a row on the text file.
+
+source: http://archive.ics.uci.edu/ml/datasets/Human+Activity+Recognition+Using+Smartphones
+
+
+
+1. Merges the training and the test sets to create one data set.
+
+Reads features.txt, activity_labels.txt, subject_train.txt, x_train.txt, y_train.txt, subject_test.txt, x_test.txt, y_test.txt data into R.
+
+Merges all data into one dataset and labels variables using features data.
+
+2. Extracts only the measurements on the mean and standard deviation for each measurement.
+Extracts columns with 'mean' and 'standard deviation' in column name and creates a separate dataset.
+
+3. Uses descriptive activity names to name the activities in the data set
+Sets descriptive activity names
+
+4. From the data set in step 4, creates a second, independent tidy data set with the average of each variable for each activity and each subject.
+Creates separate tidy dataset with averages of each variable activity and subject
