--- a/CodeBook.Rmd
+++ b/CodeBook.Rmd
@@ -51,6 +51,7 @@ Notes:
 source: http://archive.ics.uci.edu/ml/datasets/Human+Activity+Recognition+Using+Smartphones
 
 
+# Dataset 
 
 1. Merges the training and the test sets to create one data set.
 
